--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="col-12 col-md-4">
 
       <div class="card">
-        <h3 class="card-header text-uppercase">Search By City</h3>
+        <h3 class="card-header text-uppercase">Search for a City</h3>
         <form id="user-form" class="card-body">
           <input name="username" id="username" type="text" autofocus="true" class="form-input" />
           <button type="submit" class="btn">Search</button>
@@ -45,7 +45,7 @@
     </div>
 
     <div class="col-12 col-md-8">
-      <h2 class="subtitle">Result: <span id="repo-search-term"></span></h2>
+      <!-- <h2 class="subtitle">Result: <span id="repo-search-term"></span></h2> -->
       <div id="repos-container" class="list-group"></div>
     </div>
   </main>
