--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
     <div class="jumbotron container-fluid mt-2 text-center p-2" style="background-color:#404040 ;color: white;">
         <h1> <strong>Weather Dashboard</strong></h1>
     </div>
+    <aside </aside>
     <div class="container">
        
         <div class="row">
             <div class="col-sm-4 bg-light">
                 <h4 class="pt-1"><strong>Search for a City:</strong></h4>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control"id="search-city" aria-label="City Search" aria-describedby="search-button">   
+                    <input type="text" class="form-control" id="search-city" aria-label="City Search" aria-describedby="search-button">   
                 </div>
                 <button class=" btn " type="button" id="Search">Search</button>
                 <ul class="list-group" id="city-list">
 
                 </ul>
             </div>   
-            <div class="col-sm-8">
+        <div id="main" class="col-sm-8">
+            <div>
                 <div class="row ml-3 border border-dark rounded">
                     <div class="col-sm-12" id="current-weather">
                         <h3 class="city-name mb-1 mt-2 bolder" id="current-city"></h3>
@@ -38,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 " id ="future-weather">
+            <div  id ="future-weather">
                 <h3>5-Day Forecast:</h3>
                 <div class="row text-light">
                     <div class="col-sm-2 bg-secondary forecast  ml-5 mb-3 p-2 mt-5 rounded" >
@@ -78,6 +80,7 @@
                     </div>
                 </div>
             </div>
+        </div>
             
             </div>
             </div>
